# Simple-Accelerometer-Six-Position-Calibration

./: .gitignore  README.md  main.py  pyproject.toml
data/: +X.csv  +Y.csv  +Z.csv  -X.csv  -Y.csv  -Z.csv
